# orbital-bass-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  makefile  todo.md
.github/workflows/: build-linux.yml  build-macos-intel.yml  build-macos.yml  build-windows.yml  release.yml
scripts/: notes.txt
scripts/circuits/alpha_omega/: alpha_1.py  alpha_2.py  alpha_3.py  omega_1.py  omega_2.py
scripts/circuits/vmt/: drive.py  drive2.py  era_knob.py  era_knob_b3k.py  era_knob_maelstrom.py  grunt.py  interp_era.py  pre_b3k.py  pre_vmt.py  sallen_key1.py  sallen_key2.py  vintage_jft_amplifier.py  vintage_pre.py
scripts/compressor_curves/: 1176.py  la2a.py
scripts/filters/: drive_filter.py  era_filter.py  grunt_filter.py  notch_filter.py
scripts/models/: bjt_modeling.py  cmos_modeling.py  cmos_modeling_llama.py  diode_modeling.py  jfet_modeling.py  opamp_modeling_omega.py  opamp_modeling_tanh.py  triode_modeling.py  vintage_modeling.py
scripts/spice/: TL074.lib
scripts/tests/: notch_computation.py
src/: CMakeLists.txt  factory_presets.h  parameters.h  plugin_audio_process_parameters.cpp  plugin_audio_processor.cpp  plugin_audio_processor.h  plugin_editor.cpp  plugin_editor.h  preset_manager.cpp  preset_manager.h  session_manager.cpp  session_manager.h  standalone.cpp
src/assets/: ImpulseResponseBinary.cpp  ImpulseResponseBinary.h  ImpulseResponseBinaryMapping.h  impulse_response_binary.cpp  impulse_response_binary.h
src/dsp/: amp_eq.cpp  amp_eq.h  chorus.cpp  chorus.h  compressor.cpp  compressor.h  eq.cpp  eq.h  fuzz.cpp  fuzz.h  ir.cpp  ir.h  pitch_detector.cpp  pitch_detector.h  pitch_shifter.cpp  pitch_shifter.h  synth_voices.cpp  synth_voices.h
src/dsp/circuits/: bjt.h  cmos.h  cmos_approx.h  cmos_poly.h  germanium_diode.h  jfet.h  opamp.h  opamp_omega.h  silicon_diode.h  triode.h
src/dsp/filters/: drive_filter.h
src/dsp/maths/: lookup_table_transform_cubic.h
src/dsp/overdrives/: borealis.cpp  borealis.h  helios.cpp  helios.h  nebula.cpp  nebula.h  overdrive.h
src/dsp/synth_voices/: octave_voice.cpp  octave_voice.h  square_voice.cpp  square_voice.h  triangle_voice.cpp  triangle_voice.h
src/gui/: colours.h  dimensions.h  fonts.h  header.cpp  header.h  ir_gui.cpp  ir_gui.h  meter.cpp  meter.h  panels.cpp  panels.h  post_rack.cpp  post_rack.h  preset_bar.cpp  preset_bar.h  preset_icon_buttons.cpp  preset_icon_buttons.h  session_name_display.cpp  session_name_display.h  tabs.cpp  tabs.h  tuner.cpp  tuner.h
src/gui/amp/: amp_component.cpp  amp_component.h  amp_dimensions.h  amp_knobs_component.cpp  amp_knobs_component.h  amp_type.h
src/gui/amp/designs/: borealis.h  helios.h  nebula.h
src/gui/amp/utils/: graphics.h  perlin.h
src/gui/chorus/: chorus_component.cpp  chorus_component.h  chorus_dimensions.h  chorus_knobs_component.cpp  chorus_knobs_component.h
src/gui/components/: labeled_knob.cpp  labeled_knob.h  solid_tooltip.h
src/gui/compressor/: compressor_component.cpp  compressor_component.h  compressor_dimensions.h  compressor_knobs_component.cpp  compressor_knobs_component.h  compressor_meter_component.cpp  compressor_meter_component.h
src/gui/compressor/designs/: gravity.h
src/gui/eq/: eq_component.cpp  eq_component.h  eq_dimensions.h  eq_sliders_component.cpp  eq_sliders_component.h
src/gui/fuzz/: fuzz_component.cpp  fuzz_component.h  fuzz_dimensions.h  fuzz_knobs_component.cpp  fuzz_knobs_component.h
src/gui/ir/: ir_component.cpp  ir_component.h  ir_dimensions.h  ir_type.h
src/gui/ir/designs/: borealis.h  classic_810.h  crunchy_212.h  modern_410.h  vintage_b15.h
src/gui/looks/: amp_small_look_and_feel.h  base_look_and_feel.cpp  base_look_and_feel.h  compressor_look_and_feel.cpp  compressor_look_and_feel.h  compressor_meter_look_and_feel.cpp  compressor_selector_look_and_feel.h  eq_look_and_feel.cpp  eq_look_and_feel.h  header_look_and_feel.cpp  header_look_and_feel.h  tuner_look_and_feel.cpp  tuner_look_and_feel.h
src/gui/synth/: synth_component.cpp  synth_component.h  synth_dimensions.h  synth_voice_knobs_component.cpp  synth_voice_knobs_component.h
